# Y24_FGO_ins_localizer

./: CMakeLists.txt  README.md
config/: default.yaml  sample.yaml  sample_1018.yaml
docker/: Dockerfile
include/ins_localizer/: ins_localizer_core.hpp  sensor_data.hpp  viewer.hpp
sample_data/: GNSS_Dop_data.csv  GNSS_enu_data_25Hz.csv  velocity_data.csv
src/ins_localizer/: ins_localizer_core.cpp  viewer.cpp
src/sample/: offline_ins_localizer.cpp
